Add WebSocket and WebRTC comparison

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -76,3 +76,16 @@
   year      = {2021},
   publisher = {Helsingin yliopisto}
 }
+
+@incollection{telesurgery,
+  author    = {Vitor da Silva and Tom McGregor and Reiza Rayman and Patrick PW Luke},
+  title     = {Telementoring and Telesurgery: Future or Fiction?},
+  booktitle = {Robot Surgery},
+  publisher = {IntechOpen},
+  address   = {Rijeka},
+  year      = {2010},
+  editor    = {Seung Hyuk Baik},
+  chapter   = {3},
+  doi       = {10.5772/6895},
+  url       = {https://doi.org/10.5772/6895}
+}
